# TelegramSearchBot

./: .drone.yml  .editorconfig  .env.example  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  DDD_Final_Validation_Report.md  Dockerfile  Dockerfile.build  Dockerfile.tessdata  Dockerfile.tesseract  Jenkinsfile  LICENSE  PR137-格式化错误总结.md  Program.cs  Project_Compilation_Final_Report.md  README.md  Security_Vulnerability_Fix_Report.md  TDD_Red_Green_Refactor_Demo.md  TelegramSearchBot.sln  TelegramSearchBot.sln.backup  TestMessageAnalysis.csproj  TestMessageCreation.cs  Test_Compilation_Fix_Report.md  acceptance-criteria.md  azure-pipelines.yml  build_errors.txt  build_log.txt  build_output.txt  claude-swarm.yml  combined_typechecker_and_linter_problems.txt  docker-compose.yml  extract_formatting_errors.py  pr137-formatting-errors-report.md  pr137_formatting_analysis.py  requirements.md  run_integration_tests.sh  run_message_tests.sh  (+12 more)
.github/: copilot-instructions.md  dependabot.yml
AutoPaddleOCR/: Program.cs
AutoQR/: Program.cs
Common/: Env.cs  TelegramSearchBot.Common.csproj
CommonModel/: CacheData.cs  ExportModel.cs  ImportModel.cs  Message.cs  MessageOption.cs  PaddleOCRPost.cs  PaddleOCRResult.cs  Result.cs  SearchOption.cs  SendModel.cs  TelegramSearchBot.CommonModel.csproj  User.cs
Docs/: Architecture_Overview.md  Bot_Commands_User_Guide.md  Build_and_Test_Guide.md  Circular_Dependency_Analysis_Report.md  Circular_Dependency_Resolution_Summary.md  Controller_API_Testing_Completion_Report.md  Controller_Testing_Completion_Report.md  Controller_Testing_Guide.md  DDD_Architecture_Conflict_Analysis_Report.md  DDD_Unified_Architecture_Implementation_Plan.md  Dependency_Analysis.md  Existing_Codebase_Overview.md  Final_Test_Status_Report.md  LINUX_DEPLOYMENT.md  MediatR_Controller_Refactor_Proposal.md  MediatR重构进度.md  Message_Domain_DDD_Refactoring_Report.md  Message_Domain_Final_Validation_Report.md  Message_Domain_TDD_Completion_Report.md  Message_Domain_Test_Implementation_Summary.md  Message_Domain_Testing_Plan.md  Message_TDD_Test_Coverage_Report.md  Microsoft.Extensions.AI_Migration_Plan.md  Microsoft.Extensions.AI_POC_Configuration.md  Microsoft.Extensions.AI_POC_Summary.md  Performance_Test_Final_Report.md  Project_Final_Status_Summary.md  README_CodingAgentTool.md  README_ConversationVector.md  README_FaissVectorSearch.md  README_MCP.md  README_ModelCapabilities.md  README_QdrantTroubleshooting.md  README_VectorDatabaseInit.md  TelegramSearchBot MediatR 重构方案.md  TelegramSearchBot Orleans 重构方案.md  TelegramSearchBot_Comprehensive_Test_Plan.md  Testing_Architecture_Optimization.md  Testing_Implementation_Guide.md  Testing_Strategy_Architecture.md  (+14 more)
LuceneSearch/: Program.cs
MessageDomainValidation/: MessageDomainValidation.csproj  Program.cs
MessageExporter/: MessageExporter.csproj  Program.cs
MessageSaveStore/: MessageSaveStore.csproj  Program.cs  Readme.md
MessageTest/: MessageTest.csproj  Program.cs
OCRServer/: OCRServer.csproj  Program.cs  Startup.cs
SearchServer/: Env.cs  Program.cs  SearchServer.csproj  Startup.cs
TelegramSearchBot.AI.Application/: TelegramSearchBot.AI.Application.csproj
TelegramSearchBot.AI.Domain.Tests/: TelegramSearchBot.AI.Domain.Tests.csproj
TelegramSearchBot.RmuxSidecar/: Cargo.toml  README.md
TelegramSearchBot.RmuxSidecar/src/: main.rs
docs/: CLAUDE.md  (+15 more)
telegram_search_bot/: Cargo.toml
telegram_search_bot/src/: database.rs  lib.rs  main.rs
telegram_search_bot/src/bot/: mod.rs  runner.rs
telegram_search_bot/src/controller/: executor.rs  mod.rs  pipeline.rs  search.rs  storage.rs
telegram_search_bot/src/service/: container.rs  mod.rs  search_service.rs
telegram_search_bot_common/: Cargo.toml
telegram_search_bot_common/src/: config.rs  error.rs  lib.rs
telegram_search_bot_common/src/model/: message.rs  mod.rs  search.rs
telegram_search_bot_search/: Cargo.toml
telegram_search_bot_search/src/: error.rs  lib.rs  manager.rs  tokenizer.rs
(+1534 files in other folders)
