[workspace]
resolver = "2"
members = [
    "telegram_search_bot",
    "telegram_search_bot_common",
    "telegram_search_bot_search",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ModerRAS"]
license = "MIT"
repository = "https://github.com/ModerRAS/TelegramSearchBot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Telegram Bot
teloxide = { version = "0.14", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Search engine
tantivy = "0.22"
jieba-rs = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
once_cell = "1.20"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Config
config = "0.14"
dotenvy = "0.15"
