[package]
name = "telegramsearchbot-rmux-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "telegramsearchbot-rmux-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
redis = { version = "0.27", features = ["tokio-comp"] }
rmux-sdk = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
