[package]
name = "telegram_search_bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "telegram_search_bot"
path = "src/main.rs"

[dependencies]
telegram_search_bot_common = { path = "../telegram_search_bot_common" }
telegram_search_bot_search = { path = "../telegram_search_bot_search" }

# Async runtime
tokio = { workspace = true }

# Telegram Bot
teloxide = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Utilities
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }

# HTTP client
reqwest = { workspace = true }
