[package]
name = "telegram_search_bot_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
